# slsh

./: README.md
generic_cmd_engine/: CMakeLists.txt  README.md
generic_cmd_engine/core/include/: builtin_cmds.h  cmd_engine.h
generic_cmd_engine/core/src/: builtin_cmds.c  cmd_engine.c
generic_cmd_engine/parser/include/: shell_parser.h
generic_cmd_engine/parser/src/: shell_parser.c
generic_cmd_engine/platform/freertos/: README.md
generic_cmd_engine/platform/linux/include/: linux_console.h
generic_cmd_engine/platform/linux/src/: example_main.c  linux_console.c
generic_cmd_engine/tests/: test_cmd_engine.c
